@startuml

class "internal.DatabaseOption" {
  + MaxOpenConns: int
  + MaxIdleConns: int
  + Apply (client *sqlx.DB)
}

interface "internal.DatabaseProvider" {
  - open: func(string, string) (*sqlx.DB, error)
  - mu: sync.Mutex
  - cache: map[string]*sqlx.DB
  - credentials: map[string]string
}

class "pkg.httpcontext.Value[T any]" {
  + Key: any
}

interface "platform.DatabaseProvider" {
  + Open: Open (ctx context.Context, names ...string) (*sqlx.DB, error)
  + Connect: Connect (ctx context.Context, names ...string) (*sqlx.DB, error)
}

class "platform.ErrorResponse" {
  + Error: ErrorResponseBody
}

class "platform.ErrorResponseBody" {
  + Code: int
  + Message: string
}

interface "platform.Module" {
  + Name: Name () string
  + Start: Start (context.Context) error
  + Stop: Stop (context.Context) error
  + Mount: Mount (context.Context, Router) error
}

class "platform.Options" {
  + ServerAddr: string
  + Quiet: bool
  + Modules: []string
  + ConfigFS: fs.FS
  + Telemetry: oida.Options
  + DisableTelemetry: bool
}

interface "platform.Platform" {
  - options: *Options
  - router: *chi.Mux
  - server: *http.Server
  - listener: net.Listener
  - context: context.Context
  - cancel: context.CancelFunc
  - stop: func()
  - once: sync.Once
  - registry: *Registry
  - telemetry: *TelemetryModule
}

class "platform.Registry" {
  - mu: sync.RWMutex
  - modules: []Module
  - middleware: []Middleware
  - cleanups: []func(context.Context)
  + Cleanup (fn func(context.Context))
  + Clone () *Registry
  + Close (ctx context.Context)
  + Find (target any) bool
  + Register (m Module)
  + Start (ctx context.Context, mux Router, opts *Options) error
  + Stats () int
  + Use (f Middleware)
}

class "platform.TelemetryModule" {
  - options: oida.Options
  - tracer: *oida.Tracer
  - middleware: func(http.Handler) http.Handler
  + Middleware (next http.Handler) http.Handler
  + Mount (ctx context.Context, r Router) error
  + Options () oida.Options
  + Tracer () *oida.Tracer
}

interface "platform.UnimplementedModule" {
  + NameFn: func() string
  + StartFn: func(context.Context) error
  + StopFn: func(context.Context) error
  + MountFn: func(context.Context, Router) error
}



"pkg.httpcontext.Value[T any]" --> "pkg.httpcontext.any" : .Key



"platform.ErrorResponse" --> "platform.ErrorResponseBody" : .Error





"platform.Platform" --> "platform.TelemetryModule" : .telemetry
"platform.TelemetryModule" --> "platform.UnimplementedModule" : embeds

"platform.Registry" --> "platform.Module" : .modules
"platform.Registry" --> "platform.Middleware" : .middleware



@enduml
